# graphite-stage-transition-inversion

./: .gitignore  README.md  STATUS.md  pyproject.toml
benchmarks/stage16_boundary_v2/: README.md  generation_summary.json  manifest.csv  manifest.json
configs/: backend_gate.toml  canonical.toml  radial_transition.toml  transition.toml  transition_isotropy.toml
docs/: backend_reproducibility_report.md  methods_report.md
requirements/: canonical-cpu.txt
scripts/: build_backend_probe_payload.py  build_kgpu_payload.py  build_report.py  compare_backend_probes.py  compare_radial_repro_probes.py  generate_benchmark.py  render_forward.py  retrieve_kgpu_results.py  run_backend_probe.py  run_baselines.py  run_benchmark.py  run_forward.py  run_identifiability.py  run_inversion.py  run_radial_forward.py  run_radial_repro_probe.py  verify_forward.py  verify_isotropy.py
src/graphite_stage_transition/: __init__.py  backend_gate.py  baselines.py  benchmark.py  config.py  execution.py  free_energy.py  geometry.py  gpu_payload.py  identifiability.py  inversion.py  observables.py  operators.py  protocols.py  radial.py  reaction.py  reporting.py  solver.py  synthetic.py  verification.py  visualization.py
tests/: test_backend_gate.py  test_baselines.py  test_benchmark.py  test_config.py  test_execution.py  test_free_energy.py  test_geometry.py  test_identifiability.py  test_inversion.py  test_observables.py  test_operators.py  test_protocols.py  test_radial.py  test_reaction.py  test_reporting.py  test_solver.py  test_synthetic.py  test_verification.py  test_visualization.py
(+6 files in other folders)
