[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphite-stage-transition"
version = "0.1.0"
description = "Differentiable simulation benchmark for graphite stage transitions"
requires-python = ">=3.11"
dependencies = [
  "jax>=0.4.38",
  "numpy>=2.0",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

